Arreglando el box sizing y algunos colores

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Formulario de Contacto</title>
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Font Awesome para íconos -->
+  <!-- Acá agregué Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pO5ygscGWGYoXZqkQKjUwTxMTDJwMJYAVbYXyU1JZ4JZQOX5N6+wXZdMCEU3pyhqEN7P5Z9cGrEOv4f49Q3Knw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -51,12 +51,12 @@
       <div class="overlay">
         <div class="overlay-panel overlay-left">
           <h1>¡Bienvenido de nuevo!</h1>
-          <p>Para mantenerte conectado, iniciá sesión con tu información personal</p>
+          <p>Para mantenerte conectado, iniciá sesión</p>
           <button class="ghost" id="signIn">Iniciar sesión</button>
         </div>
         <div class="overlay-panel overlay-right">
           <h1>¡Hola, amigo!</h1>
-          <p>Ingresá tus datos personales y empezá tu viaje con nosotros</p>
+          <p>¡Ingresá tus datos personales y viajá con nosotros!</p>
           <button class="ghost" id="signUp">Registrarse</button>
         </div>
       </div>
